11.2.6
  - Automatic and transparent persistence of SQL console content.
  - Obfuscation of database credentials.
    https://sourceforge.net/p/jailer/feature-requests/70/

11.2.5
  - Button to toggle Link on Hover/Link on Select for Details Panel #66. https://github.com/Wisser/Jailer/issues/66
  - The SQL filter editor of the data browser had problems with complex RHS expressions. This has been corrected.
  - Minor cosmetics to the UI.

11.2.4
  - Fixed "Invisible combo box items." https://github.com/JFormDesigner/FlatLaf/issues/426

11.2.3
  - Improved filtering of ad-hoc queries in the SQL console.
  - Fixed for "User-defined DataTypes (MS SQL Server)". See https://sourceforge.net/p/jailer/discussion/700498/thread/3ed408eb/

11.2
  - New and modern user interface look and feel.

11.1.5
  - Improved user experience when browsing data.

11.1.4
  - Fixed NPE in data browser.

11.1.3
  - Minor bug fixes.

11.1.2
  - Minor bug fixes.

11.1.1
  - Database-side filtering of ad hoc queries in SQL Console.

10.6.1
  - An error in creating NVARCHAR literals for MS-SQL Server was corrected.

10.6
  - The new "Go Back"/"Go Forward" feature allows to go back and forth 
    to any state ever reached while navigating through the database.
  - The layout auto-rearrangement can now be turned off.
    See https://sourceforge.net/p/jailer/discussion/700499/thread/255ca45c7b

10.5.10
  - The user interface of the data browser and SQL console has been made a bit more appealing.

10.5.8
  - The connection dialog has been improved.
  - Database-specific logos are now displayed in the connection dialog and in the status bar.
  - The condition editor now also displays the number of rows that are "null" or "not null".

10.5.7
  - An error in the validation of database connections that have not been used for a long time has been corrected.

10.5.6
  - Increased initial responsiveness of the Data Browser.

10.5.5
  - Performance issues with autocomplete have been fixed.

10.5.4